# GLTFViewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MD  README.md  setup.sh
glad/glad/: glad.h
imgui/: imgui_impl_opengl3.cpp
include/nlohmann/: json.hpp
src/: Camera.cpp  Camera.h  accessor.h  asset.cpp  asset.h  bufferview.h  camera.cpp  camera.h  glad.c  glhelper.hpp  gltfloader.cpp  gltfloader.h  main.cpp  mesh.cpp  mesh.h  node.cpp  node.h  scene.cpp  scene.h  vector.hpp
src/camera/: camera.cpp  camera.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
